[package]
name = "memoize"
version = "0.2.0"
description = "Attribute macro for auto-memoizing functions with somewhat-simple signatures"    
keywords = ["memoization", "cache", "proc-macro"]    
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]    
homepage = "https://github.com/dermesser/memoize"    
repository = "https://github.com/dermesser/memoize"    
documentation = "https://docs.rs/memoize"    
edition = "2018"    
license = "MIT"

[dependencies]

memoize-inner = { path = "inner/", version = "0.2.0" }
lazy_static = "1.4"
lru = { version = "0.6", optional = true }

[workspace]
members = ["inner/"]

[features]
default = []
full = ["lru", "memoize-inner/full"]
