[package]
name = "memoize"
version = "0.5.0"
description = "Attribute macro for auto-memoizing functions with somewhat-simple signatures"    
keywords = ["memoization", "cache", "proc-macro"]    
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]    
homepage = "https://github.com/dermesser/memoize"    
repository = "https://github.com/dermesser/memoize"    
documentation = "https://docs.rs/memoize"    
edition = "2018"    
license = "MIT"

[dependencies]

memoize-inner = { path = "inner/", version = "0.4" }
lazy_static = "1.4"
lru = { version = "0.7", optional = true }

[dev-dependencies]

rustc-hash = "1.1.0"
ahash = "0.8.2"

[workspace]
members = ["inner/"]

[features]
default = ["full"]
full = ["lru", "memoize-inner/full"]
